--- a/css/index.css
+++ b/css/index.css
@@ -521,7 +521,7 @@ body{
     border:none;
     padding: 15px 30px;
     color: whitesmoke;
-    background: #035aa6;
+    background: #035aa6 !important;
     outline: none;
     font-size:20px;
     font-family: aileron;
