--- a/css/color-malt.css
+++ b/css/color-malt.css
@@ -37,19 +37,19 @@
 .html-progress{
     background: #00909e;
 }
-.js-progress{
+.SQL-progress{
     background: #00909e;
 }
-.adobe-progress{
+.Python-progress{
     background: #00909e;
 }
-.php-progress{
+.Java-progress{
     background: #00909e;
 }
 .jquery-progress{
     background: #00909e;
 }
-.seo-progress{
+.R-progress{
     background: #00909e;
 }
 .portfolio-text h2{
