--- a/css/color-red.css
+++ b/css/color-red.css
@@ -34,19 +34,19 @@
 .html-progress{
     background: #c70039;
 }
-.js-progress{
+.SQL-progress{
     background: #c70039;
 }
-.adobe-progress{
+.Python-progress{
     background: #c70039;
 }
-.php-progress{
+.Java-progress{
     background: #c70039;
 }
 .jquery-progress{
     background: #c70039;
 }
-.seo-progress{
+.R-progress{
     background: #c70039;
 }
 .portfolio-text h2{
