--- a/css/index.css
+++ b/css/index.css
@@ -1166,7 +1166,9 @@ form button{
     font-family: poppins;
     font-size:20px;
     color: whitesmoke;
+    background:#BB0035;
     background: #035aa6;
+
     opacity: .8;
     margin: 20px;
     cursor: pointer;
@@ -1353,8 +1355,14 @@ For devices with smaller width like mobile phone
 
 
 @media only screen and (max-width: 550px){
+
+    #header {
+        animation: none !important; /* Desactiva animación */
+        transform: none !important; /* Evita cualquier transformación */
+    }
     .header-content{
         height: 100vh;
+        overflow: hidden;
         width: 100%;
         float: left;
         display: flex;
