--- a/css/index.css
+++ b/css/index.css
@@ -1360,6 +1360,13 @@ For devices with smaller width like mobile phone
         animation: none !important; /* Desactiva animación */
         transform: none !important; /* Evita cualquier transformación */
     }
+
+    .social-media-links, 
+    .header-image, 
+    .extra-sections {
+        display: none; /* Oculta contenido extra en móvil */
+    }
+
     .header-content{
         height: 100vh;
         overflow: hidden;
@@ -1397,6 +1404,7 @@ For devices with smaller width like mobile phone
     }
     .header-content-box{
         padding-left: 0px;
+        padding: 0;
         z-index: 2;
         text-align: center;
     }
