--- a/css/index.css
+++ b/css/index.css
@@ -1390,7 +1390,7 @@ For devices with smaller width like mobile phone
     .social-media-links{
         width: 100%;
         left: 0;
-        bottom: 80px;
+        bottom: 0;
         position: absolute;
         padding: 10px;
         height: auto;
