--- a/css/index.css
+++ b/css/index.css
@@ -1497,7 +1497,7 @@ For devices with smaller width like mobile phone
         border-radius: 10%;
     }
     .about-img {
-        width: 50%; /* J*/
+        width: 100%;
         height:250px;
         text-align: center;
         overflow: hidden;
