--- a/css/index.css
+++ b/css/index.css
@@ -1490,18 +1490,21 @@ For devices with smaller width like mobile phone
         padding-right: 10px;
         flex-direction: column-reverse;
     }
-    .about-img img{
-        width: 280px;
-        height:220px;
-        padding: 5px;
-        border-radius: 10%;
-    }
     .about-img {
-        width: 0px; /* J*/
-        height: 0px;
+        width: 250px;
+        height: 250px;
         text-align: center;
         overflow: hidden;
-        border-radius: 0%;
+        border-radius: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .about-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain; 
+        border-radius: 10%;
     }
     .service{
         height:320px;
