--- a/css/index.css
+++ b/css/index.css
@@ -906,16 +906,18 @@ padding-bottom: 40px;
     width: 100%;
     color:whitesmoke;
 }
-.blog-header{
-    height: auto;
+.blog-header {
+    height: 300px;
     width: 100%;
+    display: flex; 
+    flex-direction: column; 
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+    justify-content: center; 
     font-size: 45px;
-    font-family: raleway;
+    font-family: "Raleway", sans-serif;
     color: whitesmoke;
-    padding:10px;
+    padding: 10px;
     padding-bottom: 30px;
     padding-top: 60px;
     font-weight: 900;
